# cpp-linenoise

./: CMakeLists.txt  linenoise.hpp
examples/: CMakeLists.txt  example.cpp
